# ChangeLog for sys-apps/calculate-server
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  calculate-server-2.1.6.ebuild:
  Fix dependence.

*calculate-server-2.1.6 (01 Dec 2009)

  01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.6.ebuild:
  Ebuild for new version of calculate-server.

  30 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  -files/calculate-server-2.1.4-r1.patch:
  Remove unnecessary patch.

  27 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  calculate-server-2.1.5-r2.ebuild, calculate-server-9999.ebuild:
  Fix samba dependence

  27 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  -calculate-server-2.1.3-r1.ebuild, -calculate-server-2.1.4.ebuild,
  -calculate-server-2.1.4-r1.ebuild, -calculate-server-2.1.5.ebuild,
  calculate-server-2.1.5-r2.ebuild, calculate-server-9999.ebuild:
  Deleted older calcualte-server and fix samba dependence.

  27 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  calculate-server-9999.ebuild:
  Fix samba depends for live ebuild of calculate-server

*calculate-server-2.1.5-r2 (27 Nov 2009)

  27 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  -calculate-server-2.1.5-r1.ebuild, +calculate-server-2.1.5-r2.ebuild:
  Fix dependence for samba

  12 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.5-r1.ebuild, +files/calculate-server-2.1.5-r1.patch:
  Added patch, which fixed changing comments of samba users

  03 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.5.ebuild:
  Fixed different bugs, added support dovecot 1.2

  05 Aug 2009; Aleksandr Yakimov (yaleks) <yaleks@gentoo.ru>
  calculate-server-2.1.3.ebuild, +metadata.xml:
  Ebuild fix
