@@ -1,8 +1,10 @@
 AUX calculate-server-2.1.5-r2.patch 513 RMD160 bdbf1e6568dc70c804cbff8199d7a0b28ab56f5a SHA1 601e4746b15c0ca625d5e7253853f86e4c183f3d SHA256 cd58cb981385e4a13862b03348383b6f05cf685b6fd5aa35fc7964dac3c7a2c0
 DIST calculate-server-2.1.5.tar.bz2 151750 RMD160 f34df55deb04d4f324425c3c6b0a6b3ff570e276 SHA1 39ce789cf80d82e0e99d02498ab6bf0b3e25ea28 SHA256 209b9c3a1a46431504c032406aa19eb224390ad1ab3ab2ecb5b1bc9467ce7804
+DIST calculate-server-2.1.6-r1.tar.bz2 154333 RMD160 46896e8cb887228e4b33cfad92e1471dd155cb5c SHA1 992f0b2e0e0f9cf4d2b2e1e03597797263a97860 SHA256 d57e0694e893aa311cfce369c0c972a742dcc4bccbd37a8c994b319d78010a51
 DIST calculate-server-2.1.6.tar.bz2 154350 RMD160 d9b857fc20e963cee015ffb285bbbb68cf0da133 SHA1 dda2fa50f319f7b4cf011dd90dea6ac0fe1c068e SHA256 2c2e0880d5ae997717e4fc9da7f1536c650191f1087b0fc00247e75395b9e8ab
 EBUILD calculate-server-2.1.5-r2.ebuild 5261 RMD160 1f74308ac9eb78422c1530967ca0f82cf68a6198 SHA1 b4a1d8412ef801c9a48a46310a554d0c0942cea3 SHA256 6c0fe4e6b269e5c892e8420d123deaf36612a92a921873586f215b5f91cecddf
+EBUILD calculate-server-2.1.6-r1.ebuild 5081 RMD160 a1f5c382c9bed22b4545f7c7234bd919496ce3bb SHA1 5067009d96bc686ee657fb4bba46a343bf8dfcc0 SHA256 0f4560382c01c71aa99e783449d9d26e7438453a0bd2896802b73da09063244d
 EBUILD calculate-server-2.1.6.ebuild 5078 RMD160 a69211cbbf172260db125b64db3d931cbaec00e6 SHA1 498a844ce008a90c472e03559c092ee673a5f3b0 SHA256 076c53da76a0f3137012293d5f0e6ab8437408c572d2ed2c1818d7aa7304e19e
 EBUILD calculate-server-9999.ebuild 1146 RMD160 45048c2d855ea994b88bffa89be8e9c093bc250f SHA1 11966199679b627b4267aba0bfcff93cd3de1920 SHA256 94a2d1bc05aaa0e4e19ec782c4dac4226dd682782b809aee939c9944a083866c
-MISC ChangeLog 1831 RMD160 7df438b7b0954430a5bf45b65b50187e9576653b SHA1 04c4f72c6b17946d9f1fb53926938c3d1a060e0d SHA256 de9ad29386db96d0f0e6eeb4e6dfdab4e345c94a5924614e4aa2a6df987aa6f4
+MISC ChangeLog 1990 RMD160 b2c518ca2a780a42b8e6d48f761ed69aebb73281 SHA1 5be6a9c8cbda2f5d21a0553da3f84187d79d923d SHA256 48d371235043e461a63ad6b7ba63a57a469c9feaf254f82d7f49236afebd48b1
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
